src/objects/IOT_Trigger_Profile__c.object
<CustomObject>
    <fields>
        <fullName>Goal_How_should_it_work__c</fullName>
        <description>What is your overall goal with this real-time trigger profile and how should it work?</description>
        <inlineHelpText>What is your overall goal with this real-time trigger profile and how should it work?</inlineHelpText>
        <label>1. Goal / How should it work?</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Offer_Incentive__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Offer Incentive</label>
        <referenceTo>Offer_Incentive__c</referenceTo>
        <relationshipLabel>IOT Trigger Profiles</relationshipLabel>
        <relationshipName>IOT_Trigger_Profiles</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>What_contextual_data_Single_View__c</fullName>
        <description>What contextual data from the Single View do you want to utilize?</description>
        <inlineHelpText>What contextual data from the Single View do you want to utilize?</inlineHelpText>
        <label>3. What contextual data / Single View?</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_real_time_data_to_realize__c</fullName>
        <description>What real-time data do you want to utilize?</description>
        <inlineHelpText>What real-time data do you want to utilize?</inlineHelpText>
        <label>2. What real-time data to realize?</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <label>IOT Trigger Profile</label>
    <nameField>
        <displayFormat>IOT-{00000}</displayFormat>
        <label>IOT Trigger Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IOT Trigger Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>